feat: add GetBankDetails http handler with advanced filtering
